--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    hello world
+    you be idiot. 
+
+    <i>send it to others 😂😂😂😂😂</i>
 </body>
 </html>
